# qtl_primer_toolkit

./: .gitignore  Dockerfile  MANIFEST.in  docker-compose.yml  install_deps.py  main.py  makefile  pyproject.toml  requirement.txt  requirements-dev.txt  setup.cfg  setup.py
docs/: tutorial.md
examples/: basic_usage.py
qtlprimer/: __init__.py  cli.py  init.py
qtlprimer/config/: defaults.py  paths.py
qtlprimer/core/: __init__.py  primer_designer.py  specificity_checker.py  utils.py  variant_parser.py
qtlprimer/utils/: file_utils.py  logging_utils.py
qtlprimer/visualization/: __init__.py  gel_electrophoresis.py  recombination_plots.py
qtlprimer/visualization/templates/: gel_template.html
qtlprimer/workflow/: __init__.py  manager.py  reporter.py  validator.py
qtlprimer/workflow/templates/: report_template.html
scripts/: setup_blast_db.py
tests/: test_variant_parser.py
