[metadata]
name = qtl-primer-toolkit
version = attr: qtlprimer.__version__
author = Guangchao Sun, Changchuang Liu
author_email = guagnchaosun@sicau.edu.cn
description = QTL精细定位引物设计工具包
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/qtl-primer-toolkit
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    primer3-py>=2.0.0
    biopython>=1.79.0
    pandas>=1.5.0
    matplotlib>=3.7.0
    numpy>=1.24.0
    jinja2>=3.1.0
    openpyxl>=3.1.0
    pyyaml>=6.0.0
    pyfaidx>=0.7.0

[options.packages.find]
exclude = 
    tests*
    docs*
    examples*
    scripts*

[options.entry_points]
console_scripts =
    qtlprimer = qtlprimer.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist

[pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --cov=qtlprimer --cov-report=term-missing
